kubernetes/tranql-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranql-backend-deployment
  namespace: translator
  labels:
    service: tranql-backend-service
    app: tranql-backend
spec:
  selector:
    matchLabels:
      app: tranql-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: tranql-backend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: tranql-backplane
        image: renciorg/tranql-base
        command: [ "/usr/local/bin/gunicorn", "--workers=2", "--timeout=600", "--access-logfile='-'", "--error-logfile='-'", "--log-level=debug", "tranql.backplane.server:app" ]
        ports:
          - containerPort: 8099
            name: http
        resources:
          requests:
            memory: 200Mi
          limits:
            memory: 1Gi
      restartPolicy: Always
