kubernetes/tranql-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tranql-backend
  namespace: translator
  labels:
    service: tranql-backend-service
    app: tranql-backend
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: tranql-backplane
    image: renciorg/tranql-base
    command: [ "/usr/local/bin/gunicorn", "--workers=2", "--timeout=600", "tranql.backplane.server:app" ]
    ports:
      - containerPort: 8099
        name: http
    resources:
      requests:
        memory: 200Mi
      limits:
        memory: 1Gi
  restartPolicy: OnFailure
