kubernetes/tranql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tranql-deployment
  labels:
    app: tranql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tranql
  template:
    metadata:
      labels:
        app: tranql
    spec:
      containers:
      - name: tranql-backplane
        image: greentranslator/tranql-base
        command: [ "/usr/local/bin/gunicorn", "--workers=2", "--bind=0.0.0.0:8099", "--name=backplane", "--timeout=600", "tranql.backplane.server:app" ]
        ports:
          - containerPort: 8099
            name: http
      - name: tranql-app
        image: greentranslator/tranql-app
        command: [ "/usr/local/bin/gunicorn", "--workers=2", "--bind=0.0.0.0:8001", "--name=tranql", "--timeout=600", "tranql.api:app" ]
        ports:
          - containerPort: 8001
            name: http
