kubernetes/tranql-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranql-frontend-deployment
  namespace: translator
  labels:
    service: tranql-frontend-service
    app: tranql-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tranql-frontend
  template:
    metadata:
      labels:
        app: tranql-frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: tranql-app
        image: renciorg/tranql-app
        command: [ "/usr/local/bin/gunicorn", "--workers=2", "--bind=0.0.0.0:8001", "--timeout=600", "--access-logfile='-'", "--error-logfile='-'", "--log-level=debug", "tranql.api:app" ]
        ports:
          - containerPort: 8001
            name: http
        resources:
          requests:
            memory: 200Mi
          limits:
            memory: 1Gi
        stdin: true
      restartPolicy: Always
