kubernetes/tranql-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tranql-frontend
  namespace: translator
  labels:
    service: tranql-frontend-service
    app: tranql-frontend
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: tranql-app
    image: renciorg/tranql-app
    command: [ "/usr/local/bin/gunicorn", "--workers=2", "--bind=0.0.0.0:8001", "--timeout=600", "tranql.api:app" ]
    ports:
      - containerPort: 8001
        name: http
    resources:
      requests:
        memory: 200Mi
      limits:
        memory: 1Gi
  restartPolicy: OnFailure
