kubernetes/tranql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tranql
  labels:
    service: tranql
    app: tranql
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: tranql-backplane
    image: greentranslator/tranql-base
    command: [ "/usr/local/bin/gunicorn", "--workers=2", "--bind=0.0.0.0:8099", "--name=backplane", "--timeout=600", "tranql.backplane.server:app" ]
    ports:
      - containerPort: 8099
        name: http
    resources:
      requests:
        memory: 400Mi
      limits:
        memory: 2Gi
  - name: tranql-app
    image: greentranslator/tranql-app
    command: [ "/usr/local/bin/gunicorn", "--workers=2", "--bind=0.0.0.0:8001", "--name=tranql", "--timeout=600", "tranql.api:app" ]
    ports:
      - containerPort: 8001
        name: http
    resources:
      requests:
        memory: 400Mi
      limits:
        memory: 2Gi
  restartPolicy: OnFailure
