kubernetes/tranql-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tranql-backend-service
  namespace: translator
spec:
  type:	ClusterIP
  selector:
    app: tranql-backend
  ports:
  - protocol: TCP
    port: 8099
    targetPort: 8099
