kubernetes/tranql-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tranql-frontend-service
  namespace: translator
spec:
  type:	LoadBalancer
  loadBalancerIP: nnn.nn.nn.nnn
  selector:
    app: tranql-frontend
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
