kubernetes/tranql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tranql
spec:
  type: NodePort
  selector:
    app: tranql
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
