kubernetes/tranql-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tranql-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: tranql-frontend-service
          servicePort: 8001
      - path: /*
        backend:
          serviceName: tranql-frontend-service
          servicePort: 8001
